RESOLVED FIXED307213
[block-in-inline] ASSERT in InlineItemsBuilder::collectInlineItems when display type is unexpected
https://bugs.webkit.org/show_bug.cgi?id=307213
Summary [block-in-inline] ASSERT in InlineItemsBuilder::collectInlineItems when displ...
alan
Reported 2026-02-06 16:34:43 PST
ssia
Attachments
[fast-cq]Patch (4.73 KB, patch)
2026-02-06 16:39 PST, alan
no flags
alan
Comment 1 2026-02-06 16:39:57 PST
Created attachment 478273 [details] [fast-cq]Patch
EWS
Comment 2 2026-02-06 18:13:37 PST
Committed 306989@main (939ab7e05c37): <https://commits.webkit.org/306989@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478273 [details].
Radar WebKit Bug Importer
Comment 3 2026-02-06 18:14:14 PST
Note You need to log in before you can comment on or make changes to this bug.