[block-in-inline] ASSERT in InlineItemsBuilder::collectInlineItems when display type is unexpected https://bugs.webkit.org/show_bug.cgi?id=307213

Reviewed by Antti Koivisto.

Handle unexpected display types regardless of the renderer's type (e.g. replaced element).

Test: fast/inline/table-display-type-inside-block-inline.html

* LayoutTests/fast/inline/table-display-type-inside-block-inline-expected.txt: Added.
* LayoutTests/fast/inline/table-display-type-inside-block-inline.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationBoxTreeUpdater.cpp:
(WebCore::LayoutIntegration::BoxTreeUpdater::adjustStyleIfNeeded):

Canonical link: https://commits.webkit.org/306989@main